# bproc-pubvis

./: .gitignore  AGENTS.md  Makefile  README.md  _config.yaml  backdrop.ply  cliff.toml  main.py  pyproject.toml  suzanne.glb
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
bproc_pubvis/: constants.py  main.py  utils.py
docs/: CODEMAP.md
docs/agent/: releases.md  workflow.md
output/: 0.hdf5
scripts/: build.sh  deps.sh  release.sh
src/: constants.py  utils.py
tests/: test_integration.py  test_main.py  test_smoke.py  test_utils_helpers.py
typings/blenderproc/: __init__.pyi
