[build-system]
requires = ["setuptools>=75.6.0", "wheel>=0.45.1"]
build-backend = "setuptools.build_meta"

[project]
name = "bproc-pubvis"
version = "0.1.0"
description = "Publication-ready visualization of 3D objects and point clouds in seconds."
authors = [
    {name = "Matthias Humt", email = "github.gizzard320@passmail.net"},
]
license = {text = "GPL-3.0"}
readme = "README.md"
requires-python = ">=3.11,<3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Visualization",
]

dependencies = [
    "blenderproc>=2.8.0",
    "loguru>=0.7.0",
    "tyro>=0.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "pyright>=1.1.385",
    "fake-bpy-module-4.2",
]
bpy_external = [
    "wheel",
    "bpy==4.2.0",
    "pyyaml==6.0.1",
    "imageio==2.34.1",
    "gitpython==3.1.43",
    "scikit-image==0.23.2",
    "pypng==0.20220715.0",
    "scipy==1.13.1",
    "matplotlib==3.9.0",
    "pytz==2024.1",
    "h5py==3.11.0",
    "Pillow==10.3.0",
    "opencv-contrib-python==4.10.*",
    "scikit-learn==1.5.0",
    "python-dateutil==2.9.0.post0",
    "rich==13.7.1",
    "trimesh==4.4.0",
    "pyrender==0.1.45",
    "PyQT5",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "pyright>=1.1.385",
    "wheel",
    "bpy==4.2.0",
    "pyyaml==6.0.1",
    "imageio==2.34.1",
    "gitpython==3.1.43",
    "scikit-image==0.23.2",
    "pypng==0.20220715.0",
    "scipy==1.13.1",
    "matplotlib==3.9.0",
    "pytz==2024.1",
    "h5py==3.11.0",
    "Pillow==10.3.0",
    "opencv-contrib-python==4.10.*",
    "scikit-learn==1.5.0",
    "python-dateutil==2.9.0.post0",
    "rich==13.7.1",
    "trimesh==4.4.0",
    "pyrender==0.1.45",
    "PyQT5",
    "fake-bpy-module-4.2",
]

[project.urls]
Homepage = "https://github.com/hummat/bproc-pubvis"
Repository = "https://github.com/hummat/bproc-pubvis.git"
"Bug Tracker" = "https://github.com/hummat/bproc-pubvis/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov --cov-report=term-missing"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["."]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["constants", "utils"]

[tool.pyright]
include = ["."]
exclude = ["__pycache__", ".git", ".venv", "src/utils.py"]
pythonVersion = "3.11"
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"
reportMissingImports = "warning"
reportMissingModuleSource = "warning"

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "*/site-packages/*",
    "__pycache__/*",
]
